# xiaozhi-esp32

./: .gitignore  CMakeLists.txt  esp-box-3.patch  partitions.csv  sdkconfig  sdkconfig copy  sdkconfig copy p4  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32p4
main/: Application.cc  Application.h  AudioDevice.cc  AudioDevice.h  BoxAudioDevice.cc  Button.cc  CMakeLists.txt  Kconfig.projbuild  SystemInfo.cc  SystemReset.cc  WifiBoard.cc  application.cc  application.h  background_task.cc  box_audio_device.cc  display.cc  esp_lvgl_port.c  font_dingding.c  gps_controller.c  gps_controller.h  idf_component.yml  lv_gui.c  main.cc  main.cpp  my_esp_lvgl_port.c  my_esp_lvgl_port.h  system_info.cc  uart_driver.c  uart_driver.h
main/assets/: anyidian.p3  dakai.p3  guanbi.p3  haode.p3  liangyidian.p3  nishuo2.p3  okwifi.p3  wozai.p3
main/audio_codecs/: audio_codec.h  box_audio_codec.cc  cores3_audio_codec.cc  es8311_audio_codec.cc  es8388_audio_codec.cc  es8388_audio_codec.h  no_audio_codec.cc
main/audio_processing/: audio_processor.cc  wake_word_detect.cc  wake_word_detect.h
main/avi_player/: avi_player_port.cc  avi_player_port.h  fs_manager.c  fs_manager.h
main/display/: display.cc  display.h  fl7703_display.cc  fl7703_display.h  lcd_display.cc  lcd_display.h  no_display.cc  no_display.h  oled_display.cc  oled_display.h  rgb_gc9503v_display.cc  rgb_gc9503v_display.h  ssd1306_display.cc  ssd1306_display.h  st7789_display.cc
main/eye/: EyeAnimation.cc  EyeAnimation.h  catEye.h  config.h  defaultEye.h
main/fonts/: emoji.c  emoji.h
(+214 files in other folders)
